syntax = "proto3";

package proto;

message RegisterUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string imageUrl = 4;
}

message RegisterUserResponse {
    string result = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string imageUrl = 4;
    string token = 5;
    string result = 6;
}

message PostRequest {
    string description = 1;
    string imageUrl = 2;
    string email = 3;
    string option = 4;
    string username = 5;
}

message PostResponse {
    string result = 1;
}

message CommentRequest {
    string comment = 1;
    string name = 2;
    string email = 3;
    uint32 postid = 4;
}

message CommentResponse {
    string result = 1;
}

message FriendRequest {
    string friendMail = 1;
    string friendImage = 2;
    string friendName = 3;
    string mymail = 4;
    string myimageUrl = 5;
    string myusername = 6;
    string status = 7;
}

message FriendResponse {
    string result = 1;
}

message GetUserRequest {
    string email = 1;
}

message GetUserResponse {
    string username = 1;
    string email = 2;
    string imageUrl = 3;
}

message GetPostRequest {
    string email = 1;
}

message GetPostResponse {
    repeated PostRequest postdata = 1;
}

message GetUserFriendRequest {
    string email = 1;
}

message GetUserFriendResponse {
    repeated FriendRequest friends = 1;
}

message People {
    string username = 1;
    string email = 2;
    string imageUrl = 3;
}

message AllPerson {
    repeated People users = 1; 
}

message RequestFromUsers {
    string email = 1;
}

message RequestFromUserResponse {
    repeated FriendRequest requests = 1;
}

message AcceptRequest {
    string friendMail = 1;
    string mymail = 2;
}

message AcceptResponse {
    string result = 1;
}

message DeleteFriendRequest {
    string friendMail = 1;
    string mymail = 2;
}

message DeleteFriendResponse {
    string result = 1;
}

message SinglePostReturing {
    uint32 postid = 1;
    string description = 2;
    string imageUrl = 3;
    string email = 4;
    string username = 5;
    repeated CommentRequest comments = 6;
}

message MultiPostReturing {
    repeated SinglePostReturing posts = 1;
}

message Empty {}

service AddAppService {
    rpc Register(RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc Login(LoginUserRequest) returns (LoginUserResponse) {}
    rpc UploadPost(PostRequest) returns (PostResponse) {}
    rpc UploadComment(CommentRequest) returns (CommentResponse) {}
    rpc MakeFriend(FriendRequest) returns (FriendResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc GetUserPost(GetPostRequest) returns (GetPostResponse) {}
    rpc GetUserFriend(GetUserFriendRequest) returns (GetUserFriendResponse) {}
    rpc AllPeople(Empty) returns (AllPerson) {}
    rpc RequestFromUser(RequestFromUsers) returns (RequestFromUserResponse) {}
    rpc AcceptFriendRequest(AcceptRequest) returns (AcceptResponse) {}
    rpc DeleteFriend(DeleteFriendRequest) returns (DeleteFriendResponse) {}
    rpc AllPost(Empty) returns (MultiPostReturing) {}
}

